--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -25,7 +25,8 @@ nav {
     display: flex;
     /*will display h3 and ul in the same line*/
     justify-content: space-between;
-    align-items: center; 
+    align-items: center;
+    margin: 0px 200px; 
 }
 
 .nav-title {
@@ -50,4 +51,21 @@ nav li {
 nav a {
     text-decoration: none;
     color: #474747;
+}
+
+/*header related styles*/
+.header{
+    background-color: #FFF8F3;;
+}
+
+.banner{
+    padding: 30px 30px 30px 150px; 
+    display:flex;
+    align-items: center;
+}
+
+.banner .profile {
+    width: 584px;
+    height: 676px;
+    margin-right: 38px;
 }
