--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -26,7 +26,7 @@ nav {
     /*will display h3 and ul in the same line*/
     justify-content: space-between;
     align-items: center;
-    margin: 0px 200px; 
+    margin: 0px 200px;
 }
 
 .nav-title {
@@ -54,18 +54,64 @@ nav a {
 }
 
 /*header related styles*/
-.header{
-    background-color: #FFF8F3;;
+.header {
+    background-color: #FFF8F3;
+    background-image: url("../images/header_bg.png");
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 
-.banner{
-    padding: 30px 30px 30px 150px; 
-    display:flex;
+.banner {
+    padding: 30px 30px 0px 150px;
+    display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .banner .profile {
-    width: 584px;
-    height: 676px;
-    margin-right: 38px;
+    width: 500px;
+}
+
+.banner-greeting {
+    font-size: 45px;
+    font-weight: 600;
+    margin-bottom: 0;
+}
+
+.banner-title {
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.banner-des {
+    margin-bottom: 30px;
+    width: 585px;
+}
+
+/* main section style */
+
+/*About Section Style */
+.about {
+    padding: 130px;
+}
+
+.sec-title {
+    color: #181818;
+    text-align: center;
+    font-family: Open Sans;
+    font-size: 35px;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.sec-des {
+    color: #757575;
+    text-align: center;
+    font-family: Open Sans;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
 }
