--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -91,16 +91,22 @@ nav a {
 }
 
 /* main section style */
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
 
 /*About Section Style */
 .about {
+    border-radius: 10px;
+    background: #FFF8F3;
     padding: 130px;
+    margin-top: 130px;
 }
 
 .sec-title {
     color: #181818;
     text-align: center;
-    font-family: Open Sans;
     font-size: 35px;
     font-weight: 700;
     line-height: normal;
@@ -109,9 +115,16 @@ nav a {
 .sec-des {
     color: #757575;
     text-align: center;
-    font-family: Open Sans;
     font-size: 18px;
-    font-style: normal;
     font-weight: 400;
     line-height: 30px;
+}
+
+.about-info-con{
+    display: flex;
+    justify-content: space-around;
+}
+
+.about-info{
+    text-align: center;
 }
