--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -96,6 +96,10 @@ main {
     margin: 0 auto;
 }
 
+main section {
+    margin-top: 130px;
+}
+
 /*About Section Style */
 .about {
     border-radius: 10px;
@@ -120,12 +124,12 @@ main {
     line-height: 30px;
 }
 
-.about-info-con{
+.about-info-con {
     display: flex;
     justify-content: space-around;
 }
 
-.about-info{
+.about-info {
     text-align: center;
 }
 
@@ -134,6 +138,21 @@ main {
     padding: 30px 150px;
 }
 
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
 .skill-cont {
     display: flex;
+    gap: 24px;
+}
+
+/*resume section style */
+.rsm-con-ttl {
+    color:#474747;
+    font-size: 30px;
+    font-weight: 700;
 }
